--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Portfolio Website HTML CSS</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="static/style.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
             rel='stylesheet'>
     </head>
@@ -50,7 +50,7 @@
                     Sincerely,
                     Younes Veisi</p>
                 <div class="btn-box">
-                    <a href="#" class="btn">Hire Me</a>
+                    <a href="static/resume.pdf" class="btn" download>Download CV</a>
                     <a href="#" class="btn">Let's talk</a>
                 </div>
             </div>
@@ -71,7 +71,7 @@
         <section class="about" id="about">
             <h2 class="heading">About <span>Me</span></h2>
             <div class="about-img">
-                <img src="about.png" alt="">
+                <img src="static/about.png" alt="">
                 <span class="circle-spin"></span>
             </div>
             <div class="about-content">
@@ -195,7 +195,7 @@
                                 <div class="bar"><span></span></div>
                             </div>
                             <div class="progress">
-                                <h3>Python <span>75%</span></h3>
+                                <h3>Python <span>90%</span></h3>
                                 <div class="bar"><span></span></div>
                             </div>
                         </div>
@@ -266,6 +266,6 @@
                 <a href="#"><i class='bx bx-up-arrow-alt' ></i></a>
             </div>
         </footer>
-        <script src="script.js"></script>
+        <script src="static/script.js"></script>
     </body>
 </html>
