create general static url
created a general static directory and moved files to this directory and add path to settings and url files in mysite folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                     Sincerely,
                     Younes Veisi</p>
                 <div class="btn-box">
-                    <a href="static/resume.pdf" class="btn" download>Download CV</a>
+                    <a href="statics/resume.pdf" class="btn" download>Download CV</a>
                     <a href="#" class="btn">Let's talk</a>
                 </div>
             </div>
