--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                     Sincerely,
                     Younes Veisi</p>
                 <div class="btn-box">
-                    <a href="statics/resume.pdf" class="btn" download>Download CV</a>
+                    <a href="{%static 'resume.pdf'%}" class="btn" download>Download CV</a>
                     <a href="#" class="btn">Let's talk</a>
                 </div>
             </div>
@@ -72,7 +72,7 @@
         <section class="about" id="about">
             <h2 class="heading">About <span>Me</span></h2>
             <div class="about-img">
-                <img src="static/about.png" alt="">
+                <img src="{%static 'about.png'%}" alt="">
                 <span class="circle-spin"></span>
             </div>
             <div class="about-content">
@@ -267,6 +267,6 @@
                 <a href="#"><i class='bx bx-up-arrow-alt' ></i></a>
             </div>
         </footer>
-        <script src="static/script.js"></script>
+        <script src="{%static 'script.js'%}"></script>
     </body>
 </html>
