--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Portfolio Website HTML CSS</title>
-        <link rel="stylesheet" href="{%static 'style.css'%}">
+        <link rel="stylesheet" href="{%static 'css/style.css'%}">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
             rel='stylesheet'>
     </head>
@@ -51,7 +51,7 @@
                     Sincerely,
                     Younes Veisi</p>
                 <div class="btn-box">
-                    <a href="{%static 'resume.pdf'%}" class="btn" download>Download CV</a>
+                    <a href="{%static 'pdf/resume.pdf'%}" class="btn" download>Download CV</a>
                     <a href="#" class="btn">Let's talk</a>
                 </div>
             </div>
@@ -72,7 +72,7 @@
         <section class="about" id="about">
             <h2 class="heading">About <span>Me</span></h2>
             <div class="about-img">
-                <img src="{%static 'about.png'%}" alt="">
+                <img src="{%static 'images/about.png'%}" alt="">
                 <span class="circle-spin"></span>
             </div>
             <div class="about-content">
@@ -267,6 +267,6 @@
                 <a href="#"><i class='bx bx-up-arrow-alt' ></i></a>
             </div>
         </footer>
-        <script src="{%static 'script.js'%}"></script>
+        <script src="{%static 'js/script.js'%}"></script>
     </body>
 </html>
