--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Portfolio Website HTML CSS</title>
-        <link rel="stylesheet" href="{%static 'css/style.css'%}">
+        <link rel="stylesheet" href="{%static 'css/style.css'%}" type='text/css'>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
             rel='stylesheet'>
     </head>
